--- a/Excercise 2/excercise1.html
+++ b/Excercise 2/excercise1.html
@@ -9,6 +9,27 @@
     <script src='main.js'></script>
 </head>
 <body>
-    Hello World
+    
+
+    <div class="coolThing">
+        Hello, this is an example of the box model!
+    </div>
 </body>
+
+
+<style>
+    .coolThing {
+        border: 12px solid green;
+        margin: 50px;
+        padding: 60px;
+
+        margin-left: 0px;
+        border-left: 2px solid blue;
+        padding-left: 0px;
+
+    }
+    
+</style>
+
+
 </html>
