--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
     <script src='main.js'></script>
 </head>
 <body>
-    
+    <header>
+        <h1>
+            Computer Science 319 Projects
+        </h1>
+        <h2>
+            To access a project please use one of the following links.
+        </h2>
+        <nav>
+            <li>
+                <a href="./Activity03/index.html">Activity03 - Portfolio</a>
+            </li>
+        </nav>
+    </header>
 </body>
 </html>
