need to add the last many projects

--- a/index.html
+++ b/index.html
@@ -20,6 +20,21 @@
             <li>
                 <a href="./Activity03/index.html">Activity03 - Portfolio</a>
             </li>
+            <li>
+                <a href="./Activity05/holeman3_Activity05_bootstrap_grid_responsive.html">Bootstrap Grid Responsive</a>
+            </li>
+            <li>
+                <a href="holeman3_Activity06/holeman3_activity06.html">Catalog of Products using flower images</a>
+            </li>
+            <li>
+                <a href="holeman3_Activity07/holeman3_activity07.html">Javascript Introduction</a>
+            </li>
+            <li>
+                <a href="./Assignment01_Team37/index.html"> Assignement 1 - Catalog of non-flower products.</a>
+            </li>
+            <li>
+                <a href="./holeman3_Activity07/holeman3_activity07.html"> Activity07 </a>
+            </li>
         </nav>
     </header>
 </body>
