--- a/react/learning_react_experimental/express_day/App.html
+++ b/react/learning_react_experimental/express_day/App.html
@@ -11,7 +11,7 @@
 <body>
     Author: Robert Holeman <br>
     ISU Netid : holeman3@iastate.edu<br>
-    Date:  November 10, 2023<br>
+    Date: November 10, 2023<br>
 
 
     <h1>Request Method.</h1>
@@ -25,6 +25,13 @@
 
 
     <div id="showRobots"> </div>
+
+
+    <h1>Get Method .</h1>
+    <button onclick="getMethodById('1')">Show robot 1</button>
+    <button onclick="getMethodById('2')">Show robot 2</button>
+    <button onclick="getMethodById('3')">Show robot 3</button>
+
     <script>
         function getMethod() {
             fetch('http://localhost:8081/listRobots')
@@ -55,6 +62,16 @@
                 console.log(div);
             }
         }
+
+        function getMethodById(id) {
+            fetch('http://localhost:8081/' + id)
+                .then(response => response.json())
+                .then(data => {
+                    console.log(data);
+                    var container = document.getElementById("showData");
+                    container.innerHTML = JSON.stringify(data, undefined, 2);
+                });
+        };
 
     </script>
 </body>
